[package]
name = "protocol-engine"
version = "0.1.0"
edition = "2021"
authors = ["BTCDecoded Team"]
description = "Bitcoin protocol abstraction layer for multiple variants and evolution"
license = "MIT"
repository = "https://github.com/BTCDecoded/protocol-engine"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/protocol-engine"
keywords = ["bitcoin", "protocol", "blockchain", "network", "consensus"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Consensus layer - Local path for development
consensus-proof = { path = "../consensus-proof" }

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Cryptography - EXACT VERSIONS for security
sha2 = "=0.10.9"
ripemd = "=0.1.3"

[dev-dependencies]
tempfile = "=3.8.1"
cargo-tarpaulin = "0.27"
