[package]
name = "bllvm-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLLVM: Bitcoin protocol abstraction layer for multiple variants and evolution"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-protocol"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/bllvm-protocol"
keywords = ["bitcoin", "protocol", "blockchain", "network", "consensus"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Consensus layer - Local path for development
bllvm-consensus = { path = "../bllvm-consensus", package = "bllvm-consensus" }

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
bincode = "=1.3.3"  # For payment protocol serialization

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Cryptography - EXACT VERSIONS for security
sha2 = "=0.10.9"
ripemd = "=0.1.3"
secp256k1 = "=0.28.2"  # For BIP70 payment protocol signatures

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

[features]
# Production performance optimizations (passed through from bllvm-consensus)
production = ["bllvm-consensus/production"]
# UTXO commitments module (passed through from bllvm-consensus)
utxo-commitments = ["bllvm-consensus/utxo-commitments"]

[dev-dependencies]
tempfile = "=3.8.1"
cargo-tarpaulin = "0.27"
